# template-specialize

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  README.rst  setup.cfg  setup.py
src/template_specialize/: __init__.py  __main__.py  aws_parameter_store.py  main.py
src/tests/: __init__.py  test_aws_parameter_store.py  test_main.py
template_specialize/: __init__.py  __main__.py  aws_parameter_store.py  aws_parameterstore.py  environment.py  main.py
template_specialize/tests/: __init__.py  test.py  test_environment.py  test_main.py
