[metadata]
name = template-specialize
version = 1.5.1
url = https://github.com/craigahobbs/template-specialize
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = Command-line tool for rendering Jinja2 templates
long_description = file:README.md
long_description_content_type = text/markdown
keywords = jinja2, template, render, specialize
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Utilities

[options]
packages = template_specialize
package_dir =
    = src
install_requires =
    jinja2 >= 2.10

[options.entry_points]
console_scripts =
    template-specialize = template_specialize.main:main
